--- a/Form405_OCR/for_docker/Dockerfile
+++ b/Form405_OCR/for_docker/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /usr/src/app/
 COPY . /usr/src/app/
 RUN pip3 install torch torchvision --index-url https://download.pytorch.org/whl/cpu
 RUN pip install -r requirements.txt
-CMD ["python", "ocr.py"]
+CMD ["python", "start_ocr.py"]
